// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EndPointItem should match snapshot when selected is false 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EndPointItem
    data={
      Object {
        "examples": Object {
          "request": null,
          "response": "
        [
          {
              \\"id\\": 1,
              \\"name\\": \\"New York City\\",
              \\"state\\": \\"NY\\",
              \\"population\\": 8622698,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.896Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.896Z\\"
          },
          {
              \\"id\\": 3,
              \\"name\\": \\"Los Angeles\\",
              \\"state\\": \\"CA\\",
              \\"population\\": 3999759,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.906Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.906Z\\"
          },
          {
              \\"id\\": 2,
              \\"name\\": \\"Chicago\\",
              \\"state\\": \\"IL\\",
              \\"population\\": 2716450,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.906Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.906Z\\"
          }
        ]",
        },
        "method": "GET",
        "path": "/api/v1/cities",
        "properties": Object {
          "capital": "boolean",
          "created_at": "timestamp",
          "id": "number",
          "name": "string",
          "population": "number",
          "state": "string",
          "updated_at": "timestamp",
        },
        "request_should_include": null,
        "returns": "an array of all cities in the database",
        "successful_status_code": 200,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="button-and-path-container"
        >
          <button
            onClick={[Function]}
          >
            GET
          </button>
          <span
            className="endpoint-text-container"
          >
            <p
              className="url-path"
            >
              /api/v1/cities
            </p>
          </span>
        </div>,
        "",
      ],
      "className": "endpoint-item-container ",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <button
              onClick={[Function]}
            >
              GET
            </button>,
            <span
              className="endpoint-text-container"
            >
              <p
                className="url-path"
              >
                /api/v1/cities
              </p>
            </span>,
          ],
          "className": "button-and-path-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "GET",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "GET",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="url-path"
              >
                /api/v1/cities
              </p>,
              "className": "endpoint-text-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "/api/v1/cities",
                "className": "url-path",
              },
              "ref": null,
              "rendered": "/api/v1/cities",
              "type": "p",
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
      "",
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="button-and-path-container"
          >
            <button
              onClick={[Function]}
            >
              GET
            </button>
            <span
              className="endpoint-text-container"
            >
              <p
                className="url-path"
              >
                /api/v1/cities
              </p>
            </span>
          </div>,
          "",
        ],
        "className": "endpoint-item-container ",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <button
                onClick={[Function]}
              >
                GET
              </button>,
              <span
                className="endpoint-text-container"
              >
                <p
                  className="url-path"
                >
                  /api/v1/cities
                </p>
              </span>,
            ],
            "className": "button-and-path-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "GET",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "GET",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="url-path"
                >
                  /api/v1/cities
                </p>,
                "className": "endpoint-text-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "/api/v1/cities",
                  "className": "url-path",
                },
                "ref": null,
                "rendered": "/api/v1/cities",
                "type": "p",
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        "",
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`EndPointItem should match snapshot when selected is true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EndPointItem
    data={
      Object {
        "examples": Object {
          "request": null,
          "response": "
        [
          {
              \\"id\\": 1,
              \\"name\\": \\"New York City\\",
              \\"state\\": \\"NY\\",
              \\"population\\": 8622698,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.896Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.896Z\\"
          },
          {
              \\"id\\": 3,
              \\"name\\": \\"Los Angeles\\",
              \\"state\\": \\"CA\\",
              \\"population\\": 3999759,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.906Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.906Z\\"
          },
          {
              \\"id\\": 2,
              \\"name\\": \\"Chicago\\",
              \\"state\\": \\"IL\\",
              \\"population\\": 2716450,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.906Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.906Z\\"
          }
        ]",
        },
        "method": "GET",
        "path": "/api/v1/cities",
        "properties": Object {
          "capital": "boolean",
          "created_at": "timestamp",
          "id": "number",
          "name": "string",
          "population": "number",
          "state": "string",
          "updated_at": "timestamp",
        },
        "request_should_include": null,
        "returns": "an array of all cities in the database",
        "successful_status_code": 200,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="button-and-path-container"
        >
          <button
            onClick={[Function]}
          >
            GET
          </button>
          <span
            className="endpoint-text-container"
          >
            <p
              className="url-path"
            >
              /api/v1/cities
            </p>
          </span>
        </div>,
        <div
          className="info-area"
        >
          <h3>
            Example 
            request
            :
          </h3>
          <pre
            className="example-text"
          >
            None
          </pre>
          <p>
            Successful Status Code: 
            <span>
              200
            </span>
          </p>
          <p>
            This endpoint returns: 
            an array of all cities in the database
          </p>
          <h3>
            Example 
            response
            :
          </h3>
          <pre
            className="example-text"
          >
            
        [
          {
              "id": 1,
              "name": "New York City",
              "state": "NY",
              "population": 8622698,
              "capital": false,
              "created_at": "2019-02-05T00:54:20.896Z",
              "updated_at": "2019-02-05T00:54:20.896Z"
          },
          {
              "id": 3,
              "name": "Los Angeles",
              "state": "CA",
              "population": 3999759,
              "capital": false,
              "created_at": "2019-02-05T00:54:20.906Z",
              "updated_at": "2019-02-05T00:54:20.906Z"
          },
          {
              "id": 2,
              "name": "Chicago",
              "state": "IL",
              "population": 2716450,
              "capital": false,
              "created_at": "2019-02-05T00:54:20.906Z",
              "updated_at": "2019-02-05T00:54:20.906Z"
          }
        ]
          </pre>
        </div>,
      ],
      "className": "endpoint-item-container selected",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <button
              onClick={[Function]}
            >
              GET
            </button>,
            <span
              className="endpoint-text-container"
            >
              <p
                className="url-path"
              >
                /api/v1/cities
              </p>
            </span>,
          ],
          "className": "button-and-path-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "GET",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "GET",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="url-path"
              >
                /api/v1/cities
              </p>,
              "className": "endpoint-text-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "/api/v1/cities",
                "className": "url-path",
              },
              "ref": null,
              "rendered": "/api/v1/cities",
              "type": "p",
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3>
              Example 
              request
              :
            </h3>,
            <pre
              className="example-text"
            >
              None
            </pre>,
            <p>
              Successful Status Code: 
              <span>
                200
              </span>
            </p>,
            <p>
              This endpoint returns: 
              an array of all cities in the database
            </p>,
            <h3>
              Example 
              response
              :
            </h3>,
            <pre
              className="example-text"
            >
              
        [
          {
              "id": 1,
              "name": "New York City",
              "state": "NY",
              "population": 8622698,
              "capital": false,
              "created_at": "2019-02-05T00:54:20.896Z",
              "updated_at": "2019-02-05T00:54:20.896Z"
          },
          {
              "id": 3,
              "name": "Los Angeles",
              "state": "CA",
              "population": 3999759,
              "capital": false,
              "created_at": "2019-02-05T00:54:20.906Z",
              "updated_at": "2019-02-05T00:54:20.906Z"
          },
          {
              "id": 2,
              "name": "Chicago",
              "state": "IL",
              "population": 2716450,
              "capital": false,
              "created_at": "2019-02-05T00:54:20.906Z",
              "updated_at": "2019-02-05T00:54:20.906Z"
          }
        ]
            </pre>,
          ],
          "className": "info-area",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Example ",
                "request",
                ":",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Example ",
              "request",
              ":",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "None",
              "className": "example-text",
            },
            "ref": null,
            "rendered": "None",
            "type": "pre",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Successful Status Code: ",
                <span>
                  200
                </span>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Successful Status Code: ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 200,
                },
                "ref": null,
                "rendered": 200,
                "type": "span",
              },
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "This endpoint returns: ",
                "an array of all cities in the database",
              ],
            },
            "ref": null,
            "rendered": Array [
              "This endpoint returns: ",
              "an array of all cities in the database",
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Example ",
                "response",
                ":",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Example ",
              "response",
              ":",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "
        [
          {
              \\"id\\": 1,
              \\"name\\": \\"New York City\\",
              \\"state\\": \\"NY\\",
              \\"population\\": 8622698,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.896Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.896Z\\"
          },
          {
              \\"id\\": 3,
              \\"name\\": \\"Los Angeles\\",
              \\"state\\": \\"CA\\",
              \\"population\\": 3999759,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.906Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.906Z\\"
          },
          {
              \\"id\\": 2,
              \\"name\\": \\"Chicago\\",
              \\"state\\": \\"IL\\",
              \\"population\\": 2716450,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.906Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.906Z\\"
          }
        ]",
              "className": "example-text",
            },
            "ref": null,
            "rendered": "
        [
          {
              \\"id\\": 1,
              \\"name\\": \\"New York City\\",
              \\"state\\": \\"NY\\",
              \\"population\\": 8622698,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.896Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.896Z\\"
          },
          {
              \\"id\\": 3,
              \\"name\\": \\"Los Angeles\\",
              \\"state\\": \\"CA\\",
              \\"population\\": 3999759,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.906Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.906Z\\"
          },
          {
              \\"id\\": 2,
              \\"name\\": \\"Chicago\\",
              \\"state\\": \\"IL\\",
              \\"population\\": 2716450,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.906Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.906Z\\"
          }
        ]",
            "type": "pre",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="button-and-path-container"
          >
            <button
              onClick={[Function]}
            >
              GET
            </button>
            <span
              className="endpoint-text-container"
            >
              <p
                className="url-path"
              >
                /api/v1/cities
              </p>
            </span>
          </div>,
          <div
            className="info-area"
          >
            <h3>
              Example 
              request
              :
            </h3>
            <pre
              className="example-text"
            >
              None
            </pre>
            <p>
              Successful Status Code: 
              <span>
                200
              </span>
            </p>
            <p>
              This endpoint returns: 
              an array of all cities in the database
            </p>
            <h3>
              Example 
              response
              :
            </h3>
            <pre
              className="example-text"
            >
              
        [
          {
              "id": 1,
              "name": "New York City",
              "state": "NY",
              "population": 8622698,
              "capital": false,
              "created_at": "2019-02-05T00:54:20.896Z",
              "updated_at": "2019-02-05T00:54:20.896Z"
          },
          {
              "id": 3,
              "name": "Los Angeles",
              "state": "CA",
              "population": 3999759,
              "capital": false,
              "created_at": "2019-02-05T00:54:20.906Z",
              "updated_at": "2019-02-05T00:54:20.906Z"
          },
          {
              "id": 2,
              "name": "Chicago",
              "state": "IL",
              "population": 2716450,
              "capital": false,
              "created_at": "2019-02-05T00:54:20.906Z",
              "updated_at": "2019-02-05T00:54:20.906Z"
          }
        ]
            </pre>
          </div>,
        ],
        "className": "endpoint-item-container selected",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <button
                onClick={[Function]}
              >
                GET
              </button>,
              <span
                className="endpoint-text-container"
              >
                <p
                  className="url-path"
                >
                  /api/v1/cities
                </p>
              </span>,
            ],
            "className": "button-and-path-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "GET",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "GET",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="url-path"
                >
                  /api/v1/cities
                </p>,
                "className": "endpoint-text-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "/api/v1/cities",
                  "className": "url-path",
                },
                "ref": null,
                "rendered": "/api/v1/cities",
                "type": "p",
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3>
                Example 
                request
                :
              </h3>,
              <pre
                className="example-text"
              >
                None
              </pre>,
              <p>
                Successful Status Code: 
                <span>
                  200
                </span>
              </p>,
              <p>
                This endpoint returns: 
                an array of all cities in the database
              </p>,
              <h3>
                Example 
                response
                :
              </h3>,
              <pre
                className="example-text"
              >
                
        [
          {
              "id": 1,
              "name": "New York City",
              "state": "NY",
              "population": 8622698,
              "capital": false,
              "created_at": "2019-02-05T00:54:20.896Z",
              "updated_at": "2019-02-05T00:54:20.896Z"
          },
          {
              "id": 3,
              "name": "Los Angeles",
              "state": "CA",
              "population": 3999759,
              "capital": false,
              "created_at": "2019-02-05T00:54:20.906Z",
              "updated_at": "2019-02-05T00:54:20.906Z"
          },
          {
              "id": 2,
              "name": "Chicago",
              "state": "IL",
              "population": 2716450,
              "capital": false,
              "created_at": "2019-02-05T00:54:20.906Z",
              "updated_at": "2019-02-05T00:54:20.906Z"
          }
        ]
              </pre>,
            ],
            "className": "info-area",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Example ",
                  "request",
                  ":",
                ],
              },
              "ref": null,
              "rendered": Array [
                "Example ",
                "request",
                ":",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "None",
                "className": "example-text",
              },
              "ref": null,
              "rendered": "None",
              "type": "pre",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Successful Status Code: ",
                  <span>
                    200
                  </span>,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Successful Status Code: ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": 200,
                  },
                  "ref": null,
                  "rendered": 200,
                  "type": "span",
                },
              ],
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "This endpoint returns: ",
                  "an array of all cities in the database",
                ],
              },
              "ref": null,
              "rendered": Array [
                "This endpoint returns: ",
                "an array of all cities in the database",
              ],
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Example ",
                  "response",
                  ":",
                ],
              },
              "ref": null,
              "rendered": Array [
                "Example ",
                "response",
                ":",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "
        [
          {
              \\"id\\": 1,
              \\"name\\": \\"New York City\\",
              \\"state\\": \\"NY\\",
              \\"population\\": 8622698,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.896Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.896Z\\"
          },
          {
              \\"id\\": 3,
              \\"name\\": \\"Los Angeles\\",
              \\"state\\": \\"CA\\",
              \\"population\\": 3999759,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.906Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.906Z\\"
          },
          {
              \\"id\\": 2,
              \\"name\\": \\"Chicago\\",
              \\"state\\": \\"IL\\",
              \\"population\\": 2716450,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.906Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.906Z\\"
          }
        ]",
                "className": "example-text",
              },
              "ref": null,
              "rendered": "
        [
          {
              \\"id\\": 1,
              \\"name\\": \\"New York City\\",
              \\"state\\": \\"NY\\",
              \\"population\\": 8622698,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.896Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.896Z\\"
          },
          {
              \\"id\\": 3,
              \\"name\\": \\"Los Angeles\\",
              \\"state\\": \\"CA\\",
              \\"population\\": 3999759,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.906Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.906Z\\"
          },
          {
              \\"id\\": 2,
              \\"name\\": \\"Chicago\\",
              \\"state\\": \\"IL\\",
              \\"population\\": 2716450,
              \\"capital\\": false,
              \\"created_at\\": \\"2019-02-05T00:54:20.906Z\\",
              \\"updated_at\\": \\"2019-02-05T00:54:20.906Z\\"
          }
        ]",
              "type": "pre",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
